[package]
name = "breakout-turbo-env"
version = "0.2.3"
edition = "2024"
license = "MIT"
description = "Deterministic high-throughput Breakout vector environment"

[lib]
name = "_breakout_turbo"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.24.0"
pyo3 = { version = "0.24.2", features = ["abi3-py311"] }
rayon = "1.10.0"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"
