[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "breakout-turbo-env"
version = "0.2.5"
description = "Deterministic, fixed-point, high-throughput Breakout vector environment"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "gymnasium>=1.1,<2",
  "numpy>=1.26,<3",
]

[project.scripts]
breakout-turbo-env = "breakout_turbo_env.cli:main"

[project.optional-dependencies]
play = [
  "pygame>=2.6,<3",
]
train = [
  "torch>=2.7,<3",
]
dev = [
  "cibuildwheel>=2.23.4,<4",
  "maturin>=1.8,<2",
  "pytest>=8,<9",
  "twine>=6.2,<7",
]

[tool.maturin]
module-name = "breakout_turbo_env._breakout_turbo"
python-source = "python"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "stable_retro: live frame-by-frame differential tests requiring the local Breakout ROM",
]

[tool.uv]
exclude-newer = "2026-07-04T00:00:00Z"
constraint-dependencies = [
  "mistralai!=2.4.6",
  "guardrails-ai!=0.10.1",
]
