[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "breakout-turbo-env"
version = "0.3.5"
description = "Deterministic, fixed-point, high-throughput Breakout vector environment"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Tiago Silva" },
]
keywords = [
  "atari",
  "breakout",
  "gymnasium",
  "reinforcement-learning",
  "vector-environment",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "gymnasium>=1.1,<2",
  "numpy>=1.26,<3",
]

[project.urls]
Changelog = "https://github.com/tsilva/breakout-turbo-env/blob/main/CHANGELOG.md"
Discussions = "https://github.com/tsilva/breakout-turbo-env/discussions"
Documentation = "https://github.com/tsilva/breakout-turbo-env#readme"
Issues = "https://github.com/tsilva/breakout-turbo-env/issues"
Repository = "https://github.com/tsilva/breakout-turbo-env"

[project.scripts]
breakout-turbo-env = "breakout_turbo_env.cli:main"

[project.optional-dependencies]
play = [
  "pygame>=2.6,<3",
]
train = [
  "torch>=2.13,<3",
]
dev = [
  "cibuildwheel>=2.23.4,<4",
  "maturin>=1.8,<2",
  "pytest>=9.0.3,<10",
  "ruff>=0.12,<1",
  "twine>=6.2,<7",
]

[tool.maturin]
module-name = "breakout_turbo_env._breakout_turbo"
python-source = "python"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "stable_retro: live frame-by-frame differential tests requiring the local Breakout ROM",
]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.uv]
exclude-newer = "2026-07-12T00:00:00Z"
constraint-dependencies = [
  "mistralai!=2.4.6",
  "guardrails-ai!=0.10.1",
]
